# StoryForge-Agent

./: README.md  pyproject.toml  requirements.txt
src/app/: streamlit_app.py
src/core/: __init__.py  config.py  researcher.py  scriptwriter.py
src/mcp/: server.py
