[project]
name = "storycraft-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.5.0",
    "mcp[cli]>=1.28.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "watchdog>=6.0.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]